# ZeroLaunch-CPP

./: .gitignore  CMakeLists.txt  controller.cpp  controller.h  database.cpp  icon.qrc  initprogram.cpp  initprogram.h  keyboardhook.cpp  keyboardhook.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resultframe.cpp  resultframe.h  resultitem.cpp  resultitem.h  resultitem.ui  searchbar.cpp  searchbar.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  singleapplication.cpp  singleapplication.h  utils.cpp  utils.h
controller/: controller.cpp  controller.h  initprogram.cpp  initprogram.h  keyboardhook.cpp  keyboardhook.h  uicontroller.cpp  uicontroller.h  utils.cpp  utils.h  uwpapp.cpp  uwpapp.h  windowhook.cpp  windowhook.h
doc/: 开发环境.md  搜索算法介绍.md  设置界面展示.md
model/: chineseconvertpinyin.cpp  chineseconvertpinyin.h  database.cpp  database.h  pinyin.json  programlaunchcounter.cpp  programlaunchcounter.h
ui/: Icon.aps  Icon.rc  icon.qrc  resultframe.cpp  resultframe.h  resultframe.ui  resultitem.cpp  resultitem.h  resultitem.ui  searchbar.cpp  searchbar.h  settingwindow.cpp  settingwindow.h  settingwindow.ui  singleapplication.cpp  spinboxdelegate.cpp  spinboxdelegate.h  uiutils.cpp  uiutils.h
